add css folder, added h1,h2,p text

--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="EN-CA">
-<head>
-<title>Week 5</title>
-<link rel="stylesheet" href="css/css.css">
-</head>
+  <head>
+    <title>Week 5</title>
+    <link rel="stylesheet" href="css/css.css" />
+  </head>
 
-<body>
-<header></header>
-<main>
-<section>
-
-
-
-
-
-</section>
-<section>
-
-
-
-
-</section>
-
-</main>
-</body>
+  <body>
+    <header>
+      <h1>Capitals</h1>
+    </header>
+    <main>
+      <section>
+        <h2>London</h2>
+        <p>Longdon is a captial of England.</p>
+      </section>
+      <section>
+        <h2>Paris</h2>
+        <p>Paris is the capital of France.</p>
+      </section>
+    </main>
+  </body>
 </html>
