added class heading and red text

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="EN-CA">
   <head>
     <title>Week 5</title>
-    <link rel="stylesheet" href="css/css.css" />
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
     <header>
-      <h1>Capitals</h1>
+      <h1 class="heading">Capitals</h1>
     </header>
     <main>
       <section>
-        <h2>London</h2>
-        <p>Longdon is a captial of England.</p>
+        <h2 class="heading">London</h2>
+        <p>London is a captial of England.</p>
       </section>
       <section>
-        <h2>Paris</h2>
+        <h2 class="heading">Paris</h2>
         <p>Paris is the capital of France.</p>
       </section>
     </main>
