beige background for Paris paragraph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </section>
       <section>
         <h2 class="heading">Paris</h2>
-        <p>Paris is the capital of France.</p>
+        <p class="paris-paragraph">Paris is the capital of France.</p>
       </section>
     </main>
   </body>
