add pink background to london h2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
       <section>
-        <h2 class="heading">London</h2>
+        <h2 class="heading" id="london">London</h2>
         <p>London is a captial of England.</p>
       </section>
       <section>
