add link to ottawa and top

--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
 
   <body>
     <header>
-      <h1 class="heading">Capitals</h1>
+      <h1 class="heading" id="top">Capitals</h1>
     </header>
     <main>
+    <p><a href="#ottawa">Jump to Ottawa</a></p>
       <section>
         <h2 class="heading" id="london">London</h2>
         <p>London is a captial of England.</p>
       </section>
       <section>
+        <h2 class="heading">Rome</h2>
+        <p class="">Rome is the capital of Italy</p>
+      </section>
+      <section>
+        <h2 class="heading">Madrid</h2>
+        <p class="">Madrid is the capital of Spain.</p>
+      </section>
+      <section>
+        <h2 class="heading" id="ottawa">Ottawa</h2>
+        <p class="">Ottawa is the capital of Canada.</p>
+      </section>
+      <section>
         <h2 class="heading">Paris</h2>
-        <p class="paris-paragraph">Paris is the capital of France.</p>
+        <p class="">Paris is the capital of France.</p>
+        <p>Go to the <a href="#top">top</a></p>
       </section>
     </main>
   </body>
