add margin border, etc to lorem ipsum p and span

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <p class="">Paris is the capital of France.</p>
         <p>Go to the <a href="#top">top</a></p>
       </section>
+      <p class="ipsum">The typical filler text is the <span> Lorem Ipsum</span></p>
+
     </main>
   </body>
 </html>
